--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-test",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "compile.js",
   "scripts": {
     "start": "electron ."
   },
@@ -12,10 +12,12 @@
     "babel-preset-es2016-node5": "^1.1.2",
     "babel-preset-react": "^6.23.0",
     "electron": "^1.4.15",
+    "electron-compilers": "^5.5.1",
     "electron-packager": "^8.5.1",
     "electron-prebuilt-compile": "^1.4.15"
   },
   "dependencies": {
+    "electron-compile": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
