--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-compile": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "redis": "^2.6.5"
   }
 }
