--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "electron-prebuilt-compile": "^1.4.15"
   },
   "dependencies": {
+    "chart.js": "^1.1.1",
     "electron-compile": "^6.0.0",
     "react": "^15.4.2",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "redis": "^2.6.5"
